--- a/docs/_config.yml
+++ b/docs/_config.yml
@@ -16,9 +16,9 @@ minimal_mistakes_skin: "default" # "air", "aqua", "contrast", "dark", "dirt", "n
 
 # Site Settings
 locale: "en-US"
-title: "8-Bit Breadboard CPU"
+title: "Beta-8"
 title_separator: "-"
-subtitle: "Designing and Building my own Computer "
+subtitle: "Advanced 8-Bit Breadboard Computer"
 name: "Deven Marrero"
 description: "DOCUMENTAION, WIP"
 url: https://devenmarrero.github.io # the base hostname & protocol for your site e.g. "https://mmistakes.github.io"
